SPAC-9: Fucking did it

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,11 @@
 #game {
-  width: 900px;
-  height: 700px;
+  width: 1000px;
+  height: 1000px;
+}
+
+#game-canvas {
+  width: 1000px;
+  height: 1000px;
 }
 
 #header {
